<resources>
    <string name="app_name">Parikक्षा</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="TandC">Terms and Condition*</string>
    <string name="blank"> </string>
    <string name="TandC1">By Login you Accept All the Terms And Conditions.</string>
    <string name="TandC2">All rights are reserved by the developer.</string>
    <string name="TandC3">If the user found  misusing of this app for any purpose then he/she may banned by our moderators of this App and suspended for future EVENTS which will held by this App.</string>
    <string name="TandC4">For evaluation of test we will collect data of Quiz.</string>
    <string name="exit">Exit</string>
    <string name="nameProfile">Full Name</string>
    <string name="cPass">Confirm Password</string>
    <string name="pass">Password</string>
    <string name="email">E-mail ID</string>
    <string name="pNum">Phone number</string>
    <string name="registerBtn">Register</string>
    <string name="bts">Back to sign-in</string>
    <string name="signIn">Sign-in</string>
    <string name="registerAs">Register as new user</string>
    <string name="retry">Retry</string>
    <string name="retryMsg">We have sent you a link, Verify you email id an then try signing in by clicking retry button.</string>
    <string name="verificationMsg">Verification Pending!</string>
    <string name="signOut">Sign-out</string>
    <string name="genderTExt">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="refuse">Refused</string>
    <string name="rollNo">University roll number/Registration number</string>
    <string name="start">Start Quiz</string>
    <string name="noQuiz">More quiz not available!</string>
    <string name="logoutText">Are you sure, you want to sign-out!</string>
    <string name="prevQues">Previous</string>
    <string name="quitQuizTxt">Are you sure you want to quit the quiz? If you started the quiz and quiting, then it will be considered as attempted.</string>
    <string name="quit">Quit</string>
    <string name="submitQuizTxt">Are you sure you want to submit? All the un-attempted questions marked as zero.</string>
    <string name="dateTxt">"Date: "</string>
    <string name="timeTxt">"Time: "</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="confirm">Confirm</string>
    <string name="exitStatement">Do you want to exit application?</string>
    <string name="startQuiz">Start Quiz</string>
    <string name="startQuizState">Are you sure you want to start quiz? Timer and quiz will be started after clicking yes.</string>
    <string name="noteTxt">*Note: After selcting option confirm your option by clicking confirm button.</string>
    <string name="bol">----Best of Luck----</string>
    <string name="timeStart">--Min, --Sec</string>
    <string name="live">LIVE</string>
    <string name="allotedTim">"Alloted time: "</string>
    <string name="action_report">Report</string>
    <string name="report">Report any issue or bug:</string>
    <string name="reportHint">Write here.....</string>
    <string name="timeOut">Time Over!</string>
    <string name="reportTxt">Send Report</string>
    <string name="enterFragBtnTxt">Sign-in/Sign-up</string>
    <string name="toDash">Go to Dashboard</string>
    <string name="reportAbug">Report a bug</string>
    <string name="linkToForms">https://docs.google.com/forms/d/e/1FAIpQLScWGKPLqoQla_QY_pFr0RpB5jBP8u9qif3LFDyXJwsZX2rSFA/viewform?usp=sf_link</string>
    <string name="or">OR</string>
    <string name="action_noti">Notification</string>
    <string name="action_home">Home</string>
    <string name="goToLink">Go to this link to send report with photos and videos.</string>
    <string name="quizList">Live Quiz:</string>
    <string name="profileDetails">Profile:</string>
    <string name="rollNoId">Roll no./ID-</string>
    <string name="contact">Contact no.-</string>
    <string name="back">Back</string>
    <string name="enterPass">Password Required</string>
    <string name="enterPassDetails">Enter password provided by organiser to enter the quiz.</string>
    <string name="password">Password here…</string>
    <string name="forgotPass">Forget Password</string>
    <string name="changePass">Change Password</string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changePassDescrip">Enter your registerd E-mail ID</string>
    <string name="alert">Alert</string>
    <string name="limitAlert">Maximum number of attempt has reached, you cannot attempt now.</string>
</resources>