<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpFragment"
    android:background="@drawable/backone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen"
            android:elevation="@dimen/twenty"
            app:cardCornerRadius="@dimen/fifteen"
            app:cardElevation="@dimen/twenty"
            app:cardBackgroundColor="@color/color1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/eight"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/register"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    android:maxHeight="@dimen/oneSixty"
                    android:layout_margin="@dimen/sixteen"/>

                <EditText
                    android:id="@+id/editTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_marginRight="@dimen/eight"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/nameProfile" />

                <EditText
                    android:id="@+id/rollEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_marginRight="@dimen/eight"
                    android:ems="10"
                    android:hint="@string/rollNo"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_marginRight="@dimen/eight"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/pNum" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_marginRight="@dimen/eight"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_marginRight="@dimen/eight"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/pass"/>

                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_marginRight="@dimen/eight"
                    android:layout_marginBottom="@dimen/eight"
                    android:ems="10"
                    android:hint="@string/cPass"
                    android:inputType="textPassword" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fourty"
            android:layout_marginRight="@dimen/fourty"
            android:text="@string/registerBtn"
            android:gravity="center"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/signInPageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fourty"
            android:layout_marginRight="@dimen/fourty"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginBottom="@dimen/ten"
            android:text="@string/bts"
            android:gravity="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sixteen"
            app:cardCornerRadius="@dimen/fifteen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/twenty"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight"
                    android:text="@string/TandC"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="@dimen/five" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="@dimen/five" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="@dimen/five" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TandC4" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>