<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/twentyFiveSP"
        android:layout_marginStart="@dimen/twentyFive"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/enterPass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sixteenSP"
        android:text="@string/enterPassDetails"
        android:layout_marginStart="@dimen/twentyFive"/>

    <EditText
        android:id="@+id/passForAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyFive"
        android:layout_marginEnd="@dimen/twentyFive"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="@string/password" />
</LinearLayout>