<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="@dimen/twentyFive"
        android:layout_marginEnd="@dimen/twentyFive"
        android:layout_marginTop="@dimen/fifteen"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/twentyFiveSP"
        android:text="@string/changePass"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyFive"
        android:layout_marginEnd="@dimen/twentyFive"
        android:text="@string/changePassDescrip" />

    <EditText
        android:id="@+id/emailEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyFive"
        android:layout_marginEnd="@dimen/twentyFive"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

</LinearLayout>