<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReportFragment"
    android:background="@color/color4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen"
                app:cardCornerRadius="@dimen/eight"
                app:cardElevation="@dimen/sixteen"
                app:cardBackgroundColor="@color/color4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/eight"
                        android:layout_gravity="center"
                        android:textSize="@dimen/timeText"
                        android:textColor="@color/red1"
                        android:text="@string/report" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/eight"
                        android:adjustViewBounds="true"
                        android:maxHeight="@dimen/hund"
                        android:scaleType="centerInside"
                        android:src="@drawable/virus" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginEnd="@dimen/sixteen"
                android:layout_marginBottom="@dimen/sixteen"
                app:cardCornerRadius="@dimen/eight"
                app:cardElevation="@dimen/sixteen"
                app:cardBackgroundColor="@color/color4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/goToLink"
                        android:layout_marginStart="@dimen/eight"
                        android:layout_marginEnd="@dimen/eight"
                        android:layout_marginTop="@dimen/eight"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/eight"
                        android:layout_marginStart="@dimen/eight"
                        android:layout_marginEnd="@dimen/eight"
                        android:text="@string/linkToForms"
                        android:autoLink="web"
                        android:textColor="@color/teal_700"
                        android:linksClickable="true"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/or" />

                    <EditText
                        android:id="@+id/bugEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/eight"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/reportHint"
                        android:inputType="textMultiLine" />

                    <Button
                        android:id="@+id/sendBugRep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/eight"
                        android:layout_gravity="center"
                        android:text="@string/reportTxt" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>